--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,22 @@ body {
 }
 
 img { 
-    background-color: white;
-    padding: 20px 130px;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    height:auto
-    width: 50%;
-    
+    height:auto;
+    max-width: 100%;  
+}
+
+#img-div {
+  padding: 20px 100px;
+  background: white;
+}
+
+#img-caption {
+  text-align: center;
+  font-size: 14px;
+  padding-top: 10px
 }
 
 .main {
